added install script

--- a/minecraft.env.example
+++ b/minecraft.env.example
@@ -1,5 +1,14 @@
+# Modify these as necessary
+# For complete options, see:
+# https://github.com/itzg/docker-minecraft-server/
+# 
+# If you selected nano as your default editor:
+#   To save your changes: CTRL + O
+#   To exit:              CTRL + X
+
 TZ=America/Chicago
 TYPE=PAPER
 VERSION=LATEST
 REPLACE_ENV_VARIABLES=TRUE
 RCON_PASSWORD=hunter2
+RCON_PORT
