--- a/parrot.env.example
+++ b/parrot.env.example
@@ -1,3 +1,10 @@
+# Configure these to match those that
+# were set in minecraft.env
+# 
+# If you selected nano as your default editor:
+#   To save your changes: CTRL + O
+#   To exit:              CTRL + X
+
 MCRCON_HOST=minecraft
 MCRCON_PORT=25575
 MCRCON_PASS=hunter2
