fixed speed issue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     - "/mnt/minecraft:/data"
     environment:
     - EULA=TRUE
+    command: --noconsole
     env_file:
     - minecraft.env
   parrot:
